<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_Black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:orientation="vertical"
        android:background="@color/bg_White">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="20dp">
      <TextView
          android:id="@+id/recquanbu"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/all"
          android:background="@mipmap/icon_weiz"
          android:gravity="center"
          android:textColor="@color/qiangzi"/>
      <TextView
          android:id="@+id/recchidao"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/chidao"
          android:background="@mipmap/icon_weiz"
          android:gravity="center"
          android:layout_marginLeft="15dp"
          android:textColor="@color/qiangzi"/>
      <TextView
          android:id="@+id/reczaotui"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/zaotui"
          android:background="@mipmap/icon_weiz"
          android:gravity="center"
          android:layout_marginLeft="15dp"
          android:textColor="@color/qiangzi"/>
      <TextView
          android:id="@+id/reckuangke"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/kuangke"
          android:background="@mipmap/icon_weiz"
          android:gravity="center"
          android:layout_marginLeft="15dp"
          android:textColor="@color/qiangzi"/>
  </LinearLayout>
    <TextView
        android:id="@+id/recqingjia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qingjia"
        android:background="@mipmap/icon_weiz"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/qiangzi"/>
    </LinearLayout>
    <View
        android:id="@+id/viewdetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>