<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    >
    <ImageView
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/etphoneid"
        android:hint="@string/studentid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        style="@style/EditTextWithIcon"
        android:drawableLeft="@mipmap/zhanghao"
        android:padding="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="82dp"
        android:textSize="14sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_Gray"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
    <EditText
        android:id="@+id/etpassowrd"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        style="@style/EditTextWithIcon"
        android:padding="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:drawableLeft="@mipmap/mima"
        android:textSize="14sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_Gray"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
    <Button
        android:id="@+id/btlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/login_selector"
        android:textSize="14sp"
        android:padding="15dp"
        android:textColor="@color/bg_White"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="32dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="22dp"
        android:gravity="right"
        android:layout_marginRight="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wanl"
            android:textColor="@color/aa"
            android:layout_marginLeft="30dp"/>
        <TextView
            android:id="@+id/tvforgert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:text="@string/forgetpasswords"
            android:textColor="@color/common_text"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
</LinearLayout>