<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/alternavigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/qianblue">
        <ImageView
            android:id="@+id/modificationorderback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/backwhites"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/alter"
            android:textSize="20sp"
            android:textColor="@color/bg_White"/>
        <ImageView
            android:id="@+id/ddmodi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            />
    </LinearLayout>
    <View
        android:id="@+id/alterlinemodification"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_Gray"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newpassword"
        android:textSize="15sp"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:id="@+id/etnewmodification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/yaoqiu"
        android:layout_margin="10dp"
        style="@style/EditTextWithIcon"
        android:background="@drawable/circle_corner"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ"
        android:inputType="textPassword"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputpassword"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"
        />
    <EditText
        android:id="@+id/etnewagainmodification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/yaoqiu"
        android:layout_margin="10dp"
        style="@style/EditTextWithIcon"
        android:background="@drawable/circle_corner"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btrequiremodification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donelogin"
        android:textColor="@color/bg_White"
        android:layout_marginTop="20dp"
        android:padding="13dp"
        android:background="@color/qianblue"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
</LinearLayout>