<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="120dp"
    android:background="@color/background" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/no_data_loading_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/pic_server_error"
            />
        <TextView
            android:id="@+id/data_error_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/web_error"
            android:textColor="@color/text_color_666666"
            android:textSize="18dp" />
        <TextView
            android:id="@+id/tvDataErrorGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/net_error_go"
            android:textColor="@color/text_color_666666"
            android:textSize="14dp" />
        <Button
            android:id="@+id/data_error_button"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/default_margin_30"
            style="@style/style_button_green_corners"
            android:text="@string/try_again"
            />
    </LinearLayout>

</RelativeLayout>