<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/qianblue">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/yichang_click">
            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/recordspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/wenzis"
                android:textSize="15sp"
                android:layout_margin="2dp"
                />
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="382dp"
        android:background="@mipmap/qian_bg"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="28dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_sign"
            android:layout_marginLeft="18dp"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zongkao"
            android:textColor="@color/bg_White"
            android:layout_marginLeft="8dp"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/detailrecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zongkaos"
            android:textColor="@color/bg_White"
            android:textSize="12sp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/icon_xiangxi"
            android:gravity="center_horizontal"
            android:padding="3dp"/>
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cao"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvzan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="127dp"
                android:text="暂无数据"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/bg_White"
               android:layout_centerHorizontal="true"
                android:visibility="gone"/>
            <com.github.mikephil.charting.charts.PieChart
                android:layout_marginTop="14dp"
                android:id="@+id/mChartfenrecord"
                android:layout_width="226dp"
                android:layout_height="226dp"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
    <LinearLayout
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="22dp">
        <TextView
            android:id="@+id/recordyidao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yidao"
            android:layout_weight="1"
            android:textColor="@color/bg_White"
            android:drawableTop="@mipmap/icon_yidaocolor"
            android:drawablePadding="8dp"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/recordchidao"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/chidao"
            android:textColor="@color/bg_White"
            android:drawableTop="@mipmap/icon_cdcolor"
            android:drawablePadding="8dp"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/recordzaotui"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/zaotui"
            android:textColor="@color/bg_White"
            android:drawableTop="@mipmap/icon_ztcolor"
            android:drawablePadding="8dp"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/recordkuangke"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/kuangke"
            android:textColor="@color/bg_White"
            android:drawableTop="@mipmap/icon_kgcolor"
            android:drawablePadding="8dp"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/recordqingjia"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/qingjia"
            android:textColor="@color/bg_White"
            android:drawableTop="@mipmap/icon_qjcolor"
            android:drawablePadding="8dp"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:background="@color/center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/anke"
        android:textStyle="bold"
        android:textColor="@color/wenzis"
        android:drawableLeft="@mipmap/icon_classhour"
        android:drawablePadding="8dp"
        android:paddingLeft="18dp"
        android:gravity="center_vertical"
        android:textSize="15sp"
        android:background="@drawable/nobian_selector"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/center"/>
</LinearLayout>